--- a/html/home.html
+++ b/html/home.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site principal da AlfaTech">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
     <title>AlfaTech</title>
 </head>
+
 <body>
-<div>
-    
-</div>
+<div class="navbar"></div>
+<div class="banner"></div>
+<div class="first-ad"></div>
+<div class="info"></div>
+<div class="plan"></div>
+<div class="second-ad"></div>
+<div class="footer"></div>
+
 </body>
+
 </html>
+
+<!-- Desenvolvido por: SÀVIO SANTOS FONTANA -->
