--- a/html/home.html
+++ b/html/home.html
@@ -7,22 +7,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site principal da AlfaTech">
     <link rel="stylesheet" href="../css/style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>AlfaTech</title>
 </head>
 
 <body>
-<div class="navbar"></div>
-<div class="banner"></div>
-<div class="first-ad"></div>
-<div class="info"></div>
-<div class="plan"></div>
-<div class="second-ad"></div>
-<div class="footer"></div>
+
+    <!-- REFAZER NAVBAR USANDO UMA DIV DE WIDTH: 1024PX CENTRALIZADA NA PÁGINA -->
+    <div class="navbar">
+        <div class="nav-logo">
+            <img src="../assets/img/logo-icone.png" alt="company-logo">
+        </div>
+
+        <div class="nav-title">
+            <h1>AlfaTech</h1>
+            <p>Soluções em hospedagem</p>
+        </div>
+
+        <div class="nav-buttons">
+            <ul type="none">
+                <li>
+                    <a href="#">INFORMAÇÕES</a>
+                </li>
+                <li>
+                    <a href="#">PLANOS</a>
+                </li>
+                <li>
+                    <a href="#">PREÇOS</a>
+                </li>
+                <li>
+                    <a href="#">CONTATO</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="banner">
+
+    </div>
+    <div class="first-ad"></div>
+    <div class="info"></div>
+    <div class="plan"></div>
+    <div class="second-ad"></div>
+    <div class="footer"></div>
 
 </body>
 
