--- a/html/home.html
+++ b/html/home.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site principal da AlfaTech">
     <link rel="stylesheet" href="../css/style.css">
-    
+    <!-- font poggins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
     <title>AlfaTech</title>
 </head>
@@ -46,9 +47,8 @@
         </div>
     </div>
 
-    <div class="banner">
 
-    </div>
+    <div class="banner"></div>
     <div class="first-ad"></div>
     <div class="info"></div>
     <div class="plan"></div>
