criação da seção - banner -

--- a/html/home.html
+++ b/html/home.html
@@ -47,8 +47,24 @@
         </div>
     </div>
 
+    <div class="banner">
+        <div class="banner-content">
+            <div class="banner-info">
+                <p>
+                    Simples - Fácil de usar - 10x mais rápido
+                </p>
 
-    <div class="banner"></div>
+                <h2>O melhor serviço de hospedagem na web para o seu site.</h2>
+                <p>Obtenha a melhor velocidade para o seu site. Não perca mais clientes por causa de lentidão na sua
+                    hospedagem.</p>
+            </div>
+            <div class="banner-img">
+                <img src="../assets/img/imagem-banner.png" alt="banner">
+            </div>
+        </div>
+    </div>
+
+
     <div class="first-ad"></div>
     <div class="info"></div>
     <div class="plan"></div>
