--- a/html/home.html
+++ b/html/home.html
@@ -64,9 +64,27 @@
         </div>
     </div>
 
+    <div class="first-ad">
+        <div class="first-ad-container">
+            <div class="first-ad-left">
+                <h2>Hospede o seu site por apenas R$29 por mês.</h2>
+                <p>Também temos planos gratuitos. Adquira já o seu.</p>
+            </div>
+            <div class="first-ad-right">
+                <img src="../assets/img/icone-foguete.png" alt="ícone-foguete">
+                <a href="#">TABELA DE PREÇOS</a>
+            </div>
+        </div>
+    </div>
 
-    <div class="first-ad"></div>
-    <div class="info"></div>
+    <div class="info">
+
+    </div>
+
+
+
+
+
     <div class="plan"></div>
     <div class="second-ad"></div>
     <div class="footer"></div>
