secction info done

--- a/html/home.html
+++ b/html/home.html
@@ -70,7 +70,7 @@
                 <h2>Hospede o seu site por apenas R$29 por mês.</h2>
                 <p>Também temos planos gratuitos. Adquira já o seu.</p>
             </div>
-            <div class="first-ad-right">
+            <div class="first-ad-right"> <!-- "button" -->
                 <img src="../assets/img/icone-foguete.png" alt="ícone-foguete">
                 <a href="#">TABELA DE PREÇOS</a>
             </div>
@@ -78,7 +78,32 @@
     </div>
 
     <div class="info">
+        <div class="info-box">
+            <div class="info-sub">
+                <h2>Existem diversos serviços de hospedagem de sites.</h2>
+                <h2>Porque você deve <span>nos escolher?</span></h2>
+            </div>
 
+            <div class="info-content-img">
+                <div class="info-content-left">
+                    <img src="../assets/img/icone-engrenagens.png" alt="engrenagens">
+                    <h3>Fácil de configurar</h3>
+                    <p>Facilmente configurável em plataformas CMS populares - Wordpress, Joomia ...</p>
+                </div>
+
+                <div class="info-content-mid">
+                    <img src="../assets/img/cloud-icone.png" alt="cloud-icone">
+                    <h3>Servidores 100% Online</h3>
+                    <p>Serviços que operam 100% do tempo para manter o seu site online...</p>
+                </div>
+
+                <div class="info-content-right">
+                    <img src="../assets/img/icone-suporte.png" alt="icone-suporte">
+                    <h3>Suporte 24/7</h3>
+                    <p>Suporte altamente treinado e especializado em soluções de Cloud...</p>
+                </div>
+            </div>
+        </div>
     </div>
 
 
