--- a/html/home.html
+++ b/html/home.html
@@ -106,11 +106,14 @@
         </div>
     </div>
 
+    <div class="plan">
+        
+    </div>
 
 
 
 
-    <div class="plan"></div>
+
     <div class="second-ad"></div>
     <div class="footer"></div>
 
