table and 2nd ad-bar

--- a/html/home.html
+++ b/html/home.html
@@ -80,8 +80,8 @@
     <div class="info">
         <div class="info-box">
             <div class="info-sub">
-                <h2>Existem diversos serviços de hospedagem de sites.</h2>
-                <h2>Porque você deve <span>nos escolher?</span></h2>
+                <h2>Existem diversos serviços de hospedagem de sites. <br> <!-- break line -->
+                    Porque você deve <span>nos escolher?</span></h2>
             </div>
 
             <div class="info-content-img">
@@ -107,14 +107,155 @@
     </div>
 
     <div class="plan">
-        
+        <div class="section-plan">
+            <div class="plan-sub">
+                <h4>Pague <span>somente</span> pelo que for usar. Sem cobranças adicionais!</h4>
+            </div>
+            <div class="plan-table">
+                <table class="table1">
+                    <thead>
+                        <tr>
+                            <th>
+                                <h4>PESSOAL</h4>
+                            </th>
+                            <th>
+                                <h4>PROFISSIONAL</h4>
+                            </th>
+                            <th>
+                                <h4>EMPRESARIAL</h4>
+                            </th>
+                            <th>
+                                <h4>BIG TECHS</h4>
+                            </th>
+                        </tr>
+
+
+                        <tr>
+                            <td>
+                                <img src="../assets/img/pessoal-icone.png" alt="pessoal-icone" width="100px">
+                            </td>
+
+                            <td>
+                                <img src="../assets/img/equipe-icone.png" alt="equipe-icone" width="100px">
+                            </td>
+                            <td>
+                                <img src="../assets/img/empresa-icone.png" alt="empresa" width="100px">
+                            </td>
+                            <td>
+                                <img src="../assets/img/big-tech.png" alt="big-tech" width="100px">
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <p>Indicado para uso pessoal</p>
+                            </td>
+                            <td>
+                                <p>Indicado para profissionais de T.I</p>
+                            </td>
+                            <td>
+                                <p>Indicado para empresas</p>
+                            </td>
+                            <td>
+                                <p>Indicado para grandes empresas</p>
+                            </td>
+                        </tr>
+                    </thead>
+                    <!-- </thead> aqui -->
+                    <!-- tbody aqui -->
+                    <tbody>
+                        <tr class="impar row-1">
+                            <td>
+                                <p>1 usuário</p>
+                            </td>
+                            <td>
+                                <p>10 usuários</p>
+                            </td>
+                            <td>
+                                <p>25 usuários</p>
+                            </td>
+                            <td>
+                                <p>50 usuários</p>
+                            </td>
+                        </tr>
+
+                        <tr class="par row2">
+                            <td>
+                                <p>1 domínio grátis</p>
+                            </td>
+                            <td>
+                                <p>2 domínios grátis</p>
+                            </td>
+                            <td>
+                                <p>2 domínios grátis</p>
+                            </td>
+                            <td>
+                                <p>3 domínios grátis</p>
+                            </td>
+                        </tr>
+
+                        <tr class=" impar row3">
+                            <td>
+                                <p>200GB SSD espaço</p>
+                            </td>
+                            <td>
+                                <p>500GB SSD espaço</p>
+                            </td>
+                            <td>
+                                <p>1TB SSD espaço</p>
+                            </td>
+                            <td>
+                                <p>2TB SSD espaço</p>
+                            </td>
+                        </tr>
+
+                        <tr class="par row4">
+                            <td>
+                                <p>Ofertas especiais</p>
+                            </td>
+                            <td>
+                                <p>Ofertas especiais</p>
+                            </td>
+                            <td>
+                                <p>Ofertas especiais</p>
+                            </td>
+                            <td>
+                                <p>Ofertas especiais</p>
+                            </td>
+                        </tr>
+
+                        <tr class="impar row5">
+                            <td>
+                                <p>Suporte Limitado</p>
+                            </td>
+                            <td>
+                                <p>Suporte Iimitado</p>
+                            </td>
+                            <td>
+                                <p>Suporte Iimitado</p>
+                            </td>
+                            <td>
+                                <p>Suporte Iimitado</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 
-
-
-
-    <div class="second-ad"></div>
+    <div class="second-ad">
+        <div class="second-ad-container">
+            <div class="second-ad-left">
+                <h2>Mais de 20.000 pessoas confiam na Spark! <br> Seja um deles você também!</h2>
+            </div>
+            <div class="second-ad-right"> <!-- "button" -->
+                <img src="../assets/img/icone-foguete.png" alt="ícone-foguete">
+                <a href="#">TABELA DE PREÇOS</a>
+            </div>
+        </div>
+    </div>
     <div class="footer"></div>
 
 </body>
