--- a/html/home.html
+++ b/html/home.html
@@ -256,7 +256,33 @@
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+
+
+    <div class="footer">
+        <div class="f-logo">
+            <div class="f-logo-img">
+                <img src="../assets/img/logo-icone.png" alt="logo-icone">
+            </div>
+
+            <div class="f-logo-info">
+                <h1>AlfaTech</h1>
+                <p>Soluções em hospedagem</p>
+            </div>
+        </div>
+
+        <div class="data-footer">
+            <p>Telefone & Whatsapp: (21) 99999-5555</p>
+            <p>E-mail: suporte@alfatech.com</p>
+            <p>Endereço: Av Ayrton Senna, 3000 - Barra da Tijuca - Rio de Janeiro</p>
+            <p>© AlfaTech - Soluções em hospedagem - Todos os direitos reservados</p>
+        </div>
+    </div>
+
+    <div class="creditos">
+        <div class="creditos-content">
+            <p>Desenvolvido por <span>"SÁVIO FONTANA"</span></p>
+        </div>
+    </div>
 
 </body>
 
