missing buttons fuctions

--- a/html/tabela.html
+++ b/html/tabela.html
@@ -1,13 +1,235 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tabela de preços do site AlfaTech">
     <link rel="stylesheet" href="../css/style-tabela.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <title>Tabela de Preços</title>
 </head>
+
 <body>
-   
+    <div class="navbar">
+        <div class="navbar-content">
+            <img src="../assets/img/logo-icone-escuro.png" alt="logo-icone-escuro">
+            <h1>AlfaTech</h1>
+            <p>Soluções em hospedagem</p>
+        </div>
+
+        <div class="navbar-links">
+            <ul type="none">
+                <li>
+                    <a href="#">HOME</a>
+                </li>
+                <li>
+                    <a href="#">PLANOS</a>
+                </li>
+                <li>
+                    <a href="#">PREÇOS</a>
+                </li>
+                <li>
+                    <a href="#">CONTATO</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+    <div class="table">
+        <div class="table-content">
+            <table>
+                <thead>
+                    <tr>
+                        <th class="vazio">
+                            <h2>VAZIO</h2>
+                        </th>
+                        <th>
+                            <p>PESSOAL</p>
+                            <h2>GRÁTIS</h2>
+                        </th>
+                        <th>
+                            <p>PROFISSIONAL</p>
+                            <h2>R$29</h2>
+                        </th>
+                        <th>
+                            <p>EMPRESARIAL</p>
+                            <h2>R$59</h2>
+                        </th>
+                        <th>
+                            <p>PROFISSIONAL</p>
+                            <h2>R$99</h2>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="row2">
+                            MONITORAMENTO DE REDE
+                        </td>
+                        <td>
+                            3 REDES
+                        </td>
+                        <td>
+                            10 REDES
+                        </td>
+                        <td>
+                            20 REDES
+                        </td>
+                        <td>
+                            50 REDES
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">DASHBOARD</td>
+                        <td>1 DASHBOARD</td>
+                        <td>5 DASHBOARDs</td>
+                        <td>10 DASHBOARDs</td>
+                        <td>25 DASHBOARDs</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">USUÁRIOS</td>
+                        <td>1 USUÁRIO</td>
+                        <td>5 USUÁRIOS</td>
+                        <td>10 USUÁRIOS</td>
+                        <td>25 USUÁRIOS</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">RELATÓRIO DE ATUALIZAÇÃO</td>
+                        <td>TODA HORA</td>
+                        <td>A CADA 30 MINUTOS</td>
+                        <td>QUASE EM TEMPO REAL</td>
+                        <td>TEMPO REAL*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">RELATÓRIO DE EMAILS</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">TRANSAÇÃO ILIMITADAS</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">RASTREADOR DE PAGAMENTO</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">EXPORTAÇÃO DE DADOS</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">CONVERSOR DE MOEDA</td>
+                        <td></td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">ACESSO A API</td>
+                        <td></td>
+                        <td>*</td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">RESTRIÇÃO DE API</td>
+                        <td></td>
+                        <td></td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">FEED PERSONALIZADO</td>
+                        <td></td>
+                        <td></td>
+                        <td>*</td>
+                        <td>*</td>
+                    </tr>
+
+
+                    <tr>
+                        <td class="row2">LIMITE DE IMPORTAÇÃO DE DADOS</td>
+                        <td>ÚLTIMO ANO</td>
+                        <td>ÚLTIMOS 2 ANOS</td>
+                        <td>ÚLTIMOS 3 ANOS</td>
+                        <td>ÚLTIMOS 3 ANOS</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">RETENÇÃO DE DADOS</td>
+                        <td>TEMPO DE VIDA</td>
+                        <td>TEMPO DE VIDA</td>
+                        <td>TEMPO DE VIDA</td>
+                        <td>TEMPO DE VIDA</td>
+                    </tr>
+
+                    <tr>
+                        <td class="row2">SUPORTE</td>
+                        <td>EMAIL</td>
+                        <td>EMAIL & CHAT</td>
+                        <td>EMAIL & CHAT</td>
+                        <td>EMAIL, CHAT & VOICE</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="f-content">
+            <div class="f-logo">
+                <div class="f">
+                    <img src="../assets/img/logo-icone-escuro.png" alt="logo-icone-escuro">
+                    <h1>AlfaTech</h1>
+                    <p>Soluções em hospedagem</p>
+                </div>
+            </div>
+            <div class="f-text">
+                <p>© AlfaTech - Soluções em hospedagem - Todos os direitos reservados</p>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+    <div class="creditos">
+        <div class="creditos-content">
+            <p>Desenvolvido por <span>"SÁVIO FONTANA"</span></p>
+        </div>
+    </div>
 </body>
+
 </html>
