links linked - 99% finished -  change de <a> for <buttons> on ads

--- a/html/home.html
+++ b/html/home.html
@@ -32,16 +32,16 @@
         <div class="nav-buttons">
             <ul type="none">
                 <li>
-                    <a href="#">INFORMAÇÕES</a>
+                    <a href="#informacoes">INFORMAÇÕES</a>
                 </li>
                 <li>
-                    <a href="#">PLANOS</a>
+                    <a href="#planos">PLANOS</a>
                 </li>
                 <li>
-                    <a href="#">PREÇOS</a>
+                    <a href="tabela.html" target="_blank">PREÇOS</a>
                 </li>
                 <li>
-                    <a href="#">CONTATO</a>
+                    <a href="#contato">CONTATO</a>
                 </li>
             </ul>
         </div>
@@ -72,12 +72,12 @@
             </div>
             <div class="first-ad-right"> <!-- "button" -->
                 <img src="../assets/img/icone-foguete.png" alt="ícone-foguete">
-                <a href="#">TABELA DE PREÇOS</a>
+                <a href="tabela.html" target="_blank">TABELA DE PREÇOS</a>
             </div>
         </div>
     </div>
 
-    <div class="info">
+    <div class="info" id="informacoes">
         <div class="info-box">
             <div class="info-sub">
                 <h2>Existem diversos serviços de hospedagem de sites. <br> <!-- break line -->
@@ -106,7 +106,7 @@
         </div>
     </div>
 
-    <div class="plan">
+    <div class="plan" id="planos">
         <div class="section-plan">
             <div class="plan-sub">
                 <h4>Pague <span>somente</span> pelo que for usar. Sem cobranças adicionais!</h4>
@@ -252,13 +252,13 @@
             </div>
             <div class="second-ad-right"> <!-- "button" -->
                 <img src="../assets/img/icone-foguete.png" alt="ícone-foguete">
-                <a href="#">TABELA DE PREÇOS</a>
+                <a href="tabela.html" target="_blank">TABELA DE PREÇOS</a>
             </div>
         </div>
     </div>
 
 
-    <div class="footer">
+    <div class="footer" id="contato">
         <div class="f-logo">
             <div class="f-logo-img">
                 <img src="../assets/img/logo-icone.png" alt="logo-icone">
