--- a/html/tabela.html
+++ b/html/tabela.html
@@ -25,23 +25,23 @@
         <div class="navbar-links">
             <ul type="none">
                 <li>
-                    <a href="#">HOME</a>
+                    <a href="home.html#home" target="_blank">HOME</a>
                 </li>
                 <li>
-                    <a href="#">PLANOS</a>
+                    <a href="home.html#planos" target="_blank">PLANOS</a>
                 </li>
                 <li>
-                    <a href="#">PREÇOS</a>
+                    <a href="#precos">PREÇOS</a>
                 </li>
                 <li>
-                    <a href="#">CONTATO</a>
+                    <a href="home.html#contato" target="_blank">CONTATO</a>
                 </li>
             </ul>
         </div>
     </div>
 
 
-    <div class="table">
+    <div class="table" id="precos">
         <div class="table-content">
             <table>
                 <thead>
@@ -217,13 +217,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
 
     <div class="creditos">
         <div class="creditos-content">
